--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,7 @@
 
 theme: jekyll-theme-slate
 title: Myelofon
+google_analytics: UA-99577378-1
 github:
   repository_url: https://github.com/sudachen/Myelofon
 gems:
